--- a/root/index.html
+++ b/root/index.html
@@ -15,63 +15,61 @@
     <header>
         <img id="logo" src="/root/assets/logo.png" alt="Logo Pokemon">
         <nav class="Enlace-en-linea">
-            <ul>
+            <ul class>
                 <li class="Enlace-en-linea">
                     <a href="/root/index.html">Home</a></li>
                 <li class="Enlace-en-linea">
                     <a href="/root/buycards.html">Buy Cards</a></li>
                 <li class="Enlace-en-linea">
-                    <a href="/root/ourblog.html">Our Blog</a></li>
-                <li><button>Dark Mode</button></li>
+                    <a href="/root/ourblog.html">Our Blog</a></li>                
             </ul>
         </nav>
+        <button>Dark Mode</button>
     </header>
-    <main>
+    <section>
         <article>
             <p>Discover the treasures waiting for you</p>
             <h1>POKEMON ACTION FIGURES, TOYS AND CARDS</h1>
             <P>Pokémon is a media franchise owned by video game giant Nintendo and <br> created by Satoshi Tajiri around 1995. Originally released as a pair of <br> interlinkable Game Boy role-playing video games, Pokémon has since <br> become the 2nd most successful and lucrative video game-based media <br> franchise in the world, behind only Nintendo's Mario series.</P>
-        </article>
-        <section>           
             <ul>
                 <li class="Enlace-en-linea">
                     <a href="/root/ourblog.html">Go to our blog</a></li>
                 <li class="Enlace-en-linea">
                     <a href="/root/buycards.html">Buy cards</a></li>
             </ul>
-
-        </section>
-        <aside>
-            <img src="/root/assets/ash-leaves-anime 1.png" alt="Imagen Ash y pokemones">
-        </aside>
-    </main>
+        </article> 
+        <img src="/root/assets/ash-leaves-anime 1.png" alt="Imagen Ash y pokemones">
+    </section>
     <footer>
-        <img src="/root/assets/logo.png" alt="Logo Pokemon">
-        <p>Our vision is to provide convenience <br> and help increase your sales business.</p>
-        <a href="https://www.facebook.com/Pokemon/?locale=es_LA"><i class="fa-brands fa-facebook"></i></a></li>
-        <a href="https://twitter.com/Pokemon?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://www.instagram.com/pokemon/"><i class="fa-brands fa-instagram"></i></a>
+        <div>
+            <img src="/root/assets/logo.png" alt="Logo Pokemon">
+            <p>Our vision is to provide convenience <br> and help increase your sales business.</p>
+            <a href="https://www.facebook.com/Pokemon/?locale=es_LA"><i class="fa-brands fa-facebook"></i></a></li>
+            <a href="https://twitter.com/Pokemon?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.instagram.com/pokemon/"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        
         <div>
             <h3>About</h3>
-            <ul>
+            <ul class="vertical">
                 <li>How it works</li>
                 <li>Featured</li>
                 <li>Partnership</li>
                 <li>Business Relation</li>
             </ul>
         </div>
-        <div>
+        <div class="vertical">
             <h3>Community</h3>
-            <ul>
+            <ul class="vertical">
                 <li>Events</li>
                 <li>Blog</li>
                 <li>Podcast</li>
                 <li>Invite a friend</li>
             </ul>
         </div>
-        <div>
+        <div class="vertical">
             <h3>Social</h3>
-            <ul>
+            <ul class="vertical">
                 <li>Discord</li>
                 <li>Instagram</li>
                 <li>Twitter</li>
