CENTRAR HEADER Y MAIN

--- a/root/index.html
+++ b/root/index.html
@@ -28,7 +28,7 @@
     </header>
     <section>
         <article>
-            <p>Discover the treasures waiting for you</p>
+            <p>Discover the treasures waiting for ...</p>
             <h1>POKEMON ACTION FIGURES, TOYS AND CARDS</h1>
             <P>Pokémon is a media franchise owned by video game giant Nintendo and <br> created by Satoshi Tajiri around 1995. Originally released as a pair of <br> interlinkable Game Boy role-playing video games, Pokémon has since <br> become the 2nd most successful and lucrative video game-based media <br> franchise in the world, behind only Nintendo's Mario series.</P>
             <ul>
